<resources>
    <string name="app_name">PR9karaoke</string>
    <string name="Logo">Караоке</string>
    <string name="Login">login</string>
    <string name="Password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="Albums">Альбомы</string>
    <string name="Detskie">Детские Песни</string>
    <string name="Popular">Самые популярные песни</string>
    <string name="Winner">Песни победы</string>
    <string name="Samie_popular">Самые популярные песни 2020</string>
    <string name="chel_1">NILETTO</string>
    <string name="chel_2">ХАБИБ</string>
    <string name="chel_3">Клава Кока</string>
    <string name="chel_4">ЕГОР ШИП</string>
    <string name="chel_5">DABRO</string>
    <string name="chel_6">ХАБИБ</string>
    <string name="chel_7">GAYAZOVS BROTHERS</string>
    <string name="chel_8">NILETTO</string>
    <string name="pesnya_1">Краш</string>
    <string name="pesnya_2">Ягода малинка</string>
    <string name="pesnya_3">Покинула чат</string>
    <string name="pesnya_4">Пикачу</string>
    <string name="pesnya_5">Юность</string>
    <string name="pesnya_6">Грустинка</string>
    <string name="pesnya_7">Малиновая Лада</string>
    <string name="pesnya_8">Любимка</string>
    <string name="Vremya_1">03:32</string>
    <string name="Vremya_2">03:51</string>
    <string name="Vremya_3">03:23</string>
    <string name="Vremya_4">03:46</string>
    <string name="Vremya_5">03:57</string>
    <string name="Vremya_6">03:12</string>
    <string name="Vremya_7">03:35</string>
    <string name="Vremya_8">03:47</string>
    <string name="Karaoke_Yagoda">Ягода малинка - ХАБИБ</string>
    <string name="Stroka1">Ягода Малинка, оп-оп-оп</string>
    <string name="Stroka2">Крутит головой, залетает в топ</string>
</resources>
