<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".raspberryberry">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="321dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="583dp"
        android:layout_marginBottom="472dp"
        android:fontFamily="@font/inter"
        android:text="@string/Karaoke_Yagoda"
        android:textColor="@color/Red"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="800dp"
        android:layout_height="300dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/pesnya_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/image_3"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="746dp"
        android:layout_marginBottom="82dp"
        android:fontFamily="@font/inter"
        android:text="@string/Stroka1"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="759dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/inter"
        android:text="@string/Stroka2"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.31" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="300dp"
        android:layout_height="106dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.827"
        app:srcCompat="@drawable/karaoke_logo"
        tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>