<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".main" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="414dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="417dp"
        android:layout_marginBottom="354dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/karaoke_logo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="805dp"
        android:layout_height="50dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="672dp"
        android:layout_marginBottom="202dp"
        android:autofillHints="emailAddress"
        android:background="@color/Sign_in_Background"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/Login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="805dp"
        android:layout_height="50dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="672dp"
        android:layout_marginBottom="132dp"
        android:autofillHints="password"
        android:background="@color/Sign_in_Background"
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="805dp"
        android:layout_height="50dp"
        android:layout_marginStart="393dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="477dp"
        android:layout_marginBottom="51dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="131dp"
        android:contentDescription="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/vector" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/Password"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lock" />

</androidx.constraintlayout.widget.ConstraintLayout>